# esp32_weatherstation

./: LICENSE
src/: .gitignore  Cargo.toml  clean.sh  platformio.ini
src/.devcontainer/: Dockerfile  devcontainer.json
src/as7343-rs/: Cargo.toml  README.md
src/as7343-rs/examples/: uv.rs
src/as7343-rs/src/: as7343.rs  lib.rs
src/scripts/: flash_console.sh  flash_web.sh  monitor.sh
src/src/: anemometer.rs  lib.rs  main.rs
